--- a/style.css
+++ b/style.css
@@ -1,3 +1,97 @@
+.barra-superior{
+    height: 30pt;
+    font-size: 10pt;
+color: #f0e3e3;
+background-color: rgb(0, 0, 0);
+}
+
 body {
     text-align: center;
 }
+
+* {
+	box-sizing: border-box;
+	list-style: none;
+}
+
+a {
+	text-decoration: none;
+}
+
+body {
+	height: 100vh;
+	background: url("https://static.pexels.com/photos/5056/sky-sunset-night-space.jpeg") no-repeat center;
+	background-size: cover;
+}
+
+.head {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+}
+
+.title-site {
+	background: #ffffff;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	color: #000000;
+}
+
+.title-site-description {
+	display: block;
+	width: 100%;
+	text-align: center;
+	margin: 0;
+	padding: 1rem 0;
+}
+
+.navigation-principal {
+	background: #fdfdff;
+	width: 100%;
+	display: flex;
+	justify-content: flex-end;
+	padding: 0;
+	align-items: center;
+}
+
+.navigation-principal-list {
+	flex-direction: column;
+	text-align: center;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	display: flex;
+}
+
+.navigation-principal-list-item-link {
+	padding: 1rem;
+	color: #020202;
+	display: block;
+}
+
+.navigation-principal-list-item-link:hover {
+	color: rgba(0, 0, 0, 0.7);
+}
+
+@media all and (min-width: 600px) {
+	.head {
+		flex-direction: row;
+	}
+	.title-site {
+		width: 50vw;
+		min-width: 35vw;
+	}
+	.navigation-principal-list {
+		flex-direction: row;
+		justify-content: flex-end;
+	}
+}
+
+.barra-inferior{
+    height: 50pt;
+    font-size: 10pt;
+color: #131212;
+background-color: rgb(239, 228, 228);
+}
+
